# simulation

./: .gitignore  TODO_v8.md  build_pin_model.py  compare_configs.py  find_new_qhome.py  gait_sim_v10.py  gait_sim_v11.py  gait_sim_v12.py  gait_sim_v13.py  gait_sim_v7.py  gait_sim_v8.py  gait_sim_v9.py  leg_sim_v4.py  pin_helpers.py  sim2real_checklist_17dof.html  test_crocoddyl_minimal.py  test_crocoddyl_trot.py  test_crocoddyl_trot_viz.py  test_openloop_fall.py  tune_crocoddyl.py  verify_pin_jac_rnea.py  verify_pinocchio.py  실행코드  실행코드_상세.txt
02_Leg_UFDF_260610_7/: CMakeLists.txt  package.xml
02_Leg_UFDF_260610_7/launch/: display.launch  gazebo.launch
02_Leg_UFDF_260610_8/: CMakeLists.txt  package.xml
02_Leg_UFDF_260610_8/config/: joint_names_02_Leg_UFDF_260610_8.yaml
02_Leg_UFDF_260610_8/launch/: display.launch  gazebo.launch
biped/: README.md  biped_raw.mjcf  biped_wrapper.mjcf  run_biped_viewer.py  wbic_balance.py
biped/meshes/: HL_calf_link.STL  HL_foot_contact_link.STL  HL_foot_link.STL  HR_calf_link.STL  HR_foot_contact_link.STL  HR_foot_link.STL
biped/urdf/: biped.urdf
gait_sim/: BASELINE.md  BASELINE_pre_smoothness.md  BASELINE_v13.md  BASELINE_v14.md  BODY_INERTIA_NOTES.md  FOOT_TRACK_SWEEP_v13.24.md  HIND_EXT_REFINE_v14.5.5.md  HIND_EXT_SWEEP_v14.5.4.md  HIND_VARIANT_COMPARE_v13.25.md  HL_TH2_TAU_GRF_INVESTIGATION_v14.5.2.md  PHASE0_PLAN.md  SIM2SIM_v14.md  SOLVER_BENCHMARK_v13.0a.md  TAU_SMOOTHNESS_COMPARE.md  TIMING_v13.9.md  __main__.py  actuator.py  baseline_capture.py  baseline_capture_v14.py  body_dyn.py  config.py  dynamics.py  gait.py  kinematics.py  model.py  pin_model.py  runner.py  sim_state.py  solver_benchmark.py  tau_smoothness_compare.py  timing_benchmark.py
gait_sim/bridge/: controller_step.py  diagnose_v14.py  export_replay.py  mujoco_runner.py
gait_sim/controllers/: mpc.py  nmpc.py  wbic.py
gait_sim/viz/: __init__.py  fig_diag.py  fig_legs.py  fig_main.py  fig_tau.py  fig_wbc.py
quad/: build_real_quad.py  build_real_quad_17dof.py  contact_test.py  gen_sphere_17dof.py  jump_stand.npz  quad_hop.py  quad_ilqr.py  quad_mpc_wbic.py  quad_mpc_wbic_17dof.py  quad_nmpc.py  quad_proxddp.py  quad_proxddp_tsid.py  quad_real.mjcf  quad_real_17dof.mjcf  quad_real_17dof_sphere.mjcf  quad_real_17dof_waist.mjcf  quad_real_17dof_waist_sphere.mjcf  quad_real_pt.mjcf  quad_real_sphere.mjcf  quad_sim.py  teleop_gui.py  teleop_gui_17dof.py
quad/backup/data/: jump_fwd.npz
quad/backup/old_code/: 02leg9_fulldyn_tsid_mujoco.py  build_real_quad.py  go2_kinodynamics_mujoco.py  plot_log.py  quad_hop.py  quad_nmpc.py  quad_proxddp.py  quad_sim_A.py
quad/cpp/: CMakeLists.txt  dump_mpc.py  dump_ref.py  dump_track.py
quad/cpp/src/: main.cpp  mpc.hpp  quad_control.hpp  trot_controller.hpp  trot_sim.cpp  trot_view.cpp
quad/meshes_sim/: FL_calf_link.STL  FL_foot_contact_link.STL  FL_foot_link.STL  FL_hip_link.STL  FL_thigh_link.STL  FR_calf_link.STL  FR_hip_link.STL  FR_thigh_link.STL  HL_calf_link.STL  HL_hip_link.STL  HL_thigh_link.STL  HR_calf_link.STL  HR_foot_contact_link.STL  HR_foot_link.STL  HR_hip_link.STL  HR_thigh_link.STL  base.STL
quad/simple_mpc/: 02leg9_fulldynamics_mujoco.py  02leg9_kinodynamics_mujoco.py  go2_kinodynamics_mujoco.py  quad_centroidal.py  quad_fulldynamics.py  simple-mpc-02leg.patch
quad/urdf/: 02_Leg_UFDF_260610_8.csv  02_Leg_UFDF_260610_8.urdf  02_Leg_UFDF_260610_9.urdf  02leg_abs_link.urdf
