cmake_minimum_required(VERSION 3.16)
project(quad_mpc_wbic_cpp CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")

# 의존성: proxddp conda env (mujoco C · eigen · eiquadprog)
set(ENV_PREFIX "/home/jsh/miniforge3/envs/proxddp" CACHE PATH "conda env prefix")

find_path(MUJOCO_INCLUDE  mujoco/mujoco.h              PATHS ${ENV_PREFIX}/include REQUIRED)
find_library(MUJOCO_LIB   mujoco                        PATHS ${ENV_PREFIX}/lib     REQUIRED)
find_path(EIGEN_INCLUDE   Eigen/Dense                   PATHS ${ENV_PREFIX}/include/eigen3 /usr/include/eigen3 REQUIRED)
find_path(EIQP_INCLUDE    eiquadprog/eiquadprog-fast.hpp PATHS ${ENV_PREFIX}/include REQUIRED)
find_library(EIQP_LIB     eiquadprog                    PATHS ${ENV_PREFIX}/lib     REQUIRED)

message(STATUS "MuJoCo: ${MUJOCO_LIB}")
message(STATUS "eiquadprog: ${EIQP_LIB}")

foreach(TGT quad_cpp trot_sim)
  if(TGT STREQUAL quad_cpp)
    add_executable(quad_cpp src/main.cpp)
  else()
    add_executable(trot_sim src/trot_sim.cpp)
  endif()
  target_include_directories(${TGT} PRIVATE ${MUJOCO_INCLUDE} ${EIGEN_INCLUDE} ${EIQP_INCLUDE})
  # ★conda MuJoCo가 최신 libstdc++(GLIBCXX_3.4.32)로 빌드됨 → conda libstdc++ 명시 링크(시스템 g++ 11.4 ABI 불일치 해결)
  target_link_libraries(${TGT} PRIVATE ${ENV_PREFIX}/lib/libstdc++.so ${MUJOCO_LIB} ${EIQP_LIB})
  set_target_properties(${TGT} PROPERTIES BUILD_RPATH "${ENV_PREFIX}/lib" INSTALL_RPATH "${ENV_PREFIX}/lib")
  target_link_options(${TGT} PRIVATE "-Wl,-rpath-link,${ENV_PREFIX}/lib")
endforeach()

# ── trot_view: GLFW 뷰어 (선택, GLFW 있을 때만) ──
find_library(GLFW_LIB glfw PATHS ${ENV_PREFIX}/lib)
find_path(GLFW_INCLUDE GLFW/glfw3.h PATHS ${ENV_PREFIX}/include /usr/include)
if(GLFW_LIB AND GLFW_INCLUDE)
  message(STATUS "GLFW: ${GLFW_LIB} → trot_view 빌드")
  add_executable(trot_view src/trot_view.cpp)
  target_include_directories(trot_view PRIVATE ${MUJOCO_INCLUDE} ${EIGEN_INCLUDE} ${EIQP_INCLUDE} ${GLFW_INCLUDE})
  target_link_libraries(trot_view PRIVATE ${ENV_PREFIX}/lib/libstdc++.so ${MUJOCO_LIB} ${EIQP_LIB} ${GLFW_LIB})
  set_target_properties(trot_view PROPERTIES BUILD_RPATH "${ENV_PREFIX}/lib" INSTALL_RPATH "${ENV_PREFIX}/lib")
  target_link_options(trot_view PRIVATE "-Wl,-rpath-link,${ENV_PREFIX}/lib")
else()
  message(STATUS "GLFW 없음 → trot_view 스킵")
endif()
